--- a/package.json
+++ b/package.json
@@ -5,8 +5,15 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "test:headless": "ng test --no-watch --no-progress --browsers=ChromeHeadless",
+    "deploy:vercel": "vercel --prod",
+    "deploy:netlify": "netlify deploy --prod --dir=dist/seguros-bolivar-clone",
+    "deploy:firebase": "firebase deploy",
+    "preview:vercel": "vercel",
+    "preview:netlify": "netlify deploy --dir=dist/seguros-bolivar-clone"
   },
   "private": true,
   "dependencies": {
@@ -28,21 +35,15 @@
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.0",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.2.0"
   }
 }
-
-
-
-
-
-
-
-
-
